new object: AbstractScriptContainer + delete hardcoded task script